@@ -62,6 +62,7 @@ namespace mesmer
     int get_numsteps(){ return (int)(1 + eps + (upper - lower) / stepsize); } 
 
     const std::string& get_default_units(){ return m_units; }
+    void set_units(const char* units) { if (units)m_units = units; }
 
     // Map of Rdouble names
     // c.f. withRange above. 
@@ -74,16 +75,10 @@ namespace mesmer
 
     void set_addand(double val){ addand = val; }
     void set_label(const std::string& label) ;
-    void set_link_params(const char* name, double fac, double add, const char* units)
-    {
-      linkedname = name;
-      if(!IsNan(fac))
-        factor = fac;
-      if(!IsNan(add))
-        addand = add;
-      if (units)
-        m_units = std::string(units);
-    }
+    bool set_link_params(const char* name, double fac, double add, const char* units);
+
+    // Calculate the current value of a derivedFrom variable
+    void Rdouble::update_value();
 
     static bool SetUpLinkedVars();
 
@@ -91,7 +86,7 @@ namespace mesmer
 
     void XmlWriteValue() {
       std::ostringstream s; 
-      s << *(this) ;
+      s << originalUnits(*this); //XML updates are in original units
       m_XMLPtr->XmlWrite(s.str());
     }
 
@@ -106,7 +101,7 @@ namespace mesmer
       m_XMLPtr->XmlWriteAttribute(name, value) ;
     }
      
-    static void UpdateXMLLabelVariables() ;
+    static void UpdateXMLDerivedVariables() ;
 
     //Returns true if the value is the same as when setUnchanged was last called.
     bool isUnchanged() { return (prev==value); }
